[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/ForgotPasswordCanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://Font/AncientModernTales-a7Po.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sprites/generic-rpg-ui-inventario02.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 46
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=4]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.572549, 0.654902, 0.521569, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=6]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[node name="ForgotPasswordCanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -8.0
margin_right = 97.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForgotLabel" type="Label" parent="Control/NinePatchRect"]
margin_left = 356.9
margin_top = 18.8248
margin_right = 693.9
margin_bottom = 80.8248
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.913725, 0.890196, 1 )
text = "Forgot Password"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerLabel" type="Label" parent="Control/NinePatchRect"]
margin_left = 123.754
margin_top = 116.707
margin_right = 934.754
margin_bottom = 149.707
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Answer to Secret Question: What was the first concert you attended?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answerLineEdit" type="LineEdit" parent="Control/NinePatchRect"]
margin_left = 331.142
margin_top = 152.586
margin_right = 726.142
margin_bottom = 196.586
placeholder_text = "Enter Answer to Secret Question Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 450.427
margin_top = 292.035
margin_right = 571.427
margin_bottom = 336.035
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hideButton" type="Button" parent="Control/NinePatchRect"]
visible = false
margin_left = 412.908
margin_top = 411.0
margin_right = 433.908
margin_bottom = 431.0
text = "X"

[node name="retrieveLabel" type="Label" parent="Control/NinePatchRect"]
margin_left = 445.494
margin_top = 414.0
margin_right = 671.494
margin_bottom = 441.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="submitButton" type="Button" parent="Control/NinePatchRect"]
margin_left = 456.0
margin_top = 216.0
margin_right = 568.0
margin_bottom = 260.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/NinePatchRect/backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/hideButton" to="." method="_on_hideButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/submitButton" to="." method="_on_submitButton_pressed"]
